tests/integration/fail/equating_fns_rhs.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::EqError'
let g = fun x => x + 1 in
"a" == g